<resources>
    <string name="app_name">Kiddie Tracking Driver</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="child_information">Children Information</string>
    <string name="edit_driver_details">Edit Driver Details</string>
    <string name="start_stop_journal">Start/Stop Journal</string>
    <string name="check_in">Check-In</string>
    <string name="absent">Absent</string>
    <string name="driver_name">Driver Name</string>
    <string name="driver_contact_number">Driver Contact Number</string>
    <string name="save">Save</string>
    <string name="register_new_child">Register New Child</string>
    <string name="create_account">Create Account</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>